# hygea_to_ical

./: Cargo.toml  Makefile  README.md  hygea.ics
.github/workflows/: ci.yml
src/: calendar.rs  config.rs  file.rs  hygea.rs  lib.rs  main.rs  timeframe.rs
