[package]
name = "hygea_to_ical"
version = "0.1.5"
edition = "2018"
authors = ["Guillaume Quittet <guillaume.quittet@gmail.com>"]
license = "MIT"
description = "A tool to generate ICS file from Hygea API"
readme = "README.md"
homepage = "https://github.com/gquittet/hygea_to_ical"
repository = "https://github.com/gquittet/hygea_to_ical"
keywords = ["cli", "hygea", "ical", "ics"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.5"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
